--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Base button styles, from standard material buttons. -->
+    <style name="AppTheme.Button" parent="Widget.AppCompat.Button">
+        <item name="android:background">@color/default_background</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:layout_marginTop">16dp</item>
+    </style>
+
+    <!-- Colored button styles -->
+    <style name="AppTheme.Button.Colored" parent="AppTheme.Button">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
 </resources>
